(lang dune 3.16)

(name lab1)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "konstantiin")

(maintainers "konstantiin")


(package
 (name lab1)
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
